# opennurbs-diffutils

./: .editorconfig  LICENSE  pyproject.toml
src/git-integration/: git-diff.py  git-merge.py
src/opennurbs_diffutils/abstractmodel/: __init__.py  accessor.py  commontypes.py  componentdelta.py  componenttype.py  delta.py  error.py  filedescription.py  modeldelta.py  modeltype.py  objecttype.py  property.py  propertymap.py  session.py  stringable.py  table.py  value.py
src/opennurbs_diffutils/adapter3dm/: __init__.py  accessors.py  entity_types.py  enums.py  model.py  properties.py  tables.py  transform.py  value_types.py
src/opennurbs_diffutils/cmd/: common.py  diff.py  diff3.py  patch.py
